seperated application.properties for localhost and docker